# vxwork_rust

./: Cargo.toml  Makefile  README.md  rustfmt.toml  wrapper.c  wrapper.h
src/: binding.rs  error.rs  lib.rs  main.rs  mq.rs  signal.rs
